finishing up mod 1

--- a/Module 1/1_Introduction.html
+++ b/Module 1/1_Introduction.html
@@ -298,7 +298,7 @@ print(results)</pre>
 
 <p>Using a Pearson-frequentist perspective, we might simply do the following:</p>
 
-<p>meaning the observations are independent. In a one-proportion hypothesis test, the success-failure condition is checked using the null proportion, which is \(H_0: p = 0.5\) and \(H_A: p &gt; 0.5\).</p>
+<p>In a one-proportion hypothesis test, the success-failure condition is checked using the null proportion, which is \(H_0: p = 0.5\) and \(H_A: p &gt; 0.5\).</p>
 
 <p>Under the null hypothesis \(n \times p = n \times (1-p) = 1028 \times 0.5 = 514 &gt; 10\). With these conditions verified, the normal model may be applied to \(\hat{p}\).</p>
 
