--- a/Prereq/0_Set_up.html
+++ b/Prereq/0_Set_up.html
@@ -10,7 +10,6 @@
 
 
 
-  <meta name="date" content="2017-08-13" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -100,34 +99,33 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">August 13, 2017</p>
           </hgroup>
   </slide>
 
-<slide class=''><hgroup><h2>Welcome </h2><h3> set up</h3></hgroup><article  id="welcome-set-up" class="smaller ">
+<slide class=''><hgroup><h2>Welcome </h2><h3> Setting Up</h3></hgroup><article  id="welcome-setting-up" class="smaller ">
 
 <p>Before getting started there are a few things you&#39;ll need in order to be successful in the course</p>
 
-<ol>
+<ul>
 <li>A recent version of <a href='https://cran.r-project.org/' title=''>R</a></li>
-</ol>
+</ul>
 
 <p>I am currently using version 3.4.0 on Ubuntu</p>
 
-<ol>
+<ul>
 <li>A recent version of <a href='https://www.rstudio.com/products/rstudio/download/' title=''>RStudio</a></li>
-</ol>
+</ul>
 
 <p>I am currently using version 1.0.143</p>
 
-<ol>
+<ul>
 <li><p>A web browser like Firefox (any OS), Chrome (any OS) or Microsoft Edge (Windows 10)</p></li>
 <li><p>(Optional) StackExchange <a href='https://stats.stackexchange.com/' title=''>Cross Validated</a> account</p></li>
-</ol>
+</ul>
 
 <p>Feel free to ask lookup, ask and answer questions on Cross Validated</p>
 
-</article></slide><slide class=''><hgroup><h2>Optional </h2><h3> References</h3></hgroup><article  id="optional-references" class="smaller ">
+</article></slide><slide class=''><hgroup><h2>Optional References</h2></hgroup><article  id="optional-references" class="smaller ">
 
 <p>No textbook is necessary to follow with the course!</p>
 
