updating prereqs for ipython notebooks

--- a/Prereq/0_Set_up.html
+++ b/Prereq/0_Set_up.html
@@ -102,7 +102,7 @@
           </hgroup>
   </slide>
 
-<slide class=''><hgroup><h2>Welcome </h2><h3> Setting Up</h3></hgroup><article  id="welcome-setting-up" class="smaller ">
+<slide class=''><hgroup><h2>Welcome </h2><h3> Setting Up R</h3></hgroup><article  id="welcome-setting-up-r" class="smaller ">
 
 <p>Before getting started there are a few things you&#39;ll need in order to be successful in the course</p>
 
@@ -117,6 +117,48 @@
 </ul>
 
 <p>I am currently using version 1.0.143</p>
+
+</article></slide><slide class=''><hgroup><h2>Welcome </h2><h3> Setting Up Python</h3></hgroup><article  id="welcome-setting-up-python" class="smaller ">
+
+<p>A recent version of Python 3</p>
+
+<ul>
+<li><p><a href='https://conda.io/miniconda.html' title=''>Anaconda</a></p></li>
+<li><p><a href='https://store.enthought.com/downloads/' title=''>Enthought Canopy</a></p></li>
+<li><p><a href='https://www.python.org/' title=''>Python</a></p></li>
+</ul>
+
+<p>Jupyter Notebook environment</p>
+
+<ul>
+<li><p><a href='https://nbviewer.jupyter.org/github/ipython/ipython/blob/4.0.x/examples/IPython%20Kernel/Index.ipynb' title=''>IPython notebooks</a></p></li>
+<li><p><code>pip install jupyter</code></p></li>
+<li><p><code>conda install jupyter</code></p></li>
+<li><p><code>conda install ipython</code></p></li>
+</ul>
+
+</article></slide><slide class=''><hgroup><h2>Welcome </h2><h3> Setting Up Python pt. 2</h3></hgroup><article  id="welcome-setting-up-python-pt.-2" class="smaller ">
+
+<p>Scientific python stack</p>
+
+<ul>
+<li><p><code>conda install numpy</code> (easiest)</p></li>
+<li><p><code>pip install numpy</code> (may be problematic on Windows)</p></li>
+</ul>
+
+<p>Enthought Canopy has it&#39;s owns package manager as well. Point and click.</p>
+
+<p>Spyder IDE</p>
+
+<ul>
+<li><code>conda install spyder</code></li>
+</ul>
+
+<p>Enthought Canopy comes with an IDE that allows you to open up IPython Notebooks.</p>
+
+<p><a href='https://support.enthought.com/hc/en-us/articles/204469580-Using-Jupyter-IPython-Notebooks-in-Canopy' title=''>Using Jupyter (IPython) Notebooks in Canopy</a></p>
+
+</article></slide><slide class=''><hgroup><h2>Welcome </h2><h3> Setting Up</h3></hgroup><article  id="welcome-setting-up" class="smaller ">
 
 <ul>
 <li><p>A web browser like Firefox (any OS), Chrome (any OS) or Microsoft Edge (Windows 10)</p></li>
